--- a/public/config.json
+++ b/public/config.json
@@ -31,24 +31,24 @@
         }
     },
     "configurationArguments": {
-      "applicationExtensionKey": "__application_key_from_appcenter_here__",
+      "applicationExtensionKey": "7060bb68-e240-4386-bf16-8aff9bdcf561",
       "save": {
-        "url": "https://<your-domain-here>/journeybuilder/save",
+        "url": "https://journeyactivity4merck.herokuapp.com/journeybuilder/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://<your-domain-here>/journeybuilder/publish",
+        "url": "https://journeyactivity4merck.herokuapp.com/journeybuilder/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://<your-domain-here>/journeybuilder/stop",
+        "url": "https://journeyactivity4merck.herokuapp.com/journeybuilder/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://<your-domain-here>/journeybuilder/validate",
+        "url": "https://journeyactivity4merck.herokuapp.com/journeybuilder/validate",
         "verb": "POST",
         "useJwt": true
       }
